[project]
name = "demo_package_sirisarah"
version = "0.0.1"
authors = [
  { name="Admin", email="admin@sirisarah.com" },
]
description = "A demo package from SiriSarah LLC"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sirisarah/python"
"Bug Tracker" = "https://github.com/sirisarah/python/issues"